Release 1.0.0 version for 1.16.x